--- a/chat-application/src/main/resources/view/ClientForm.fxml
+++ b/chat-application/src/main/resources/view/ClientForm.fxml
@@ -2,24 +2,31 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="475.0" prefWidth="537.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.ClientFormController">
+<AnchorPane prefHeight="547.0" prefWidth="564.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.ClientFormController">
    <children>
-      <TextField fx:id="txtMsg" layoutX="65.0" layoutY="386.0" prefHeight="48.0" prefWidth="336.0" />
-      <JFXButton buttonType="RAISED" layoutX="424.0" layoutY="391.0" onAction="#btnSendOnAction" prefHeight="34.0" prefWidth="86.0" style="-fx-background-radius: 10; -fx-background-color: #89CFF3;" text="Send">
+      <TextField fx:id="txtMsg" layoutX="20.0" layoutY="475.0" prefHeight="48.0" prefWidth="336.0" />
+      <JFXButton buttonType="RAISED" layoutX="457.0" layoutY="480.0" onAction="#btnSendOnAction" prefHeight="34.0" prefWidth="86.0" style="-fx-background-radius: 25; -fx-background-color: #89CFF3;" text="Send">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </JFXButton>
-      <TextArea fx:id="txtAreaC" layoutX="41.0" layoutY="75.0" prefHeight="283.0" prefWidth="456.0" />
-      <Label fx:id="lblClientName" layoutX="232.0" layoutY="23.0">
+      <Label fx:id="lblClientName" layoutX="250.0" layoutY="14.0">
          <font>
             <Font name="System Bold" size="27.0" />
          </font>
       </Label>
+      <ScrollPane fx:id="scrollPane" layoutX="20.0" layoutY="61.0" prefHeight="386.0" prefWidth="523.0">
+         <content>
+            <VBox fx:id="vBox" prefHeight="384.0" prefWidth="521.0" />
+         </content>
+      </ScrollPane>
+      <JFXButton buttonType="RAISED" layoutX="377.0" layoutY="463.0" onAction="#btnEmojiOnAction" prefHeight="25.0" prefWidth="49.0" text="Emoji" />
+      <JFXButton layoutX="377.0" layoutY="499.0" onAction="#btnImageOnAction" text="Image" />
    </children>
 </AnchorPane>
