--- a/chat-application/src/main/resources/view/LoginForm.fxml
+++ b/chat-application/src/main/resources/view/LoginForm.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -8,21 +9,33 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="461.0" prefWidth="537.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.LoginFormController">
+<AnchorPane prefHeight="589.0" prefWidth="537.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.controller.LoginFormController">
    <children>
-      <TextField fx:id="txtName" layoutX="200.0" layoutY="259.0" prefHeight="34.0" prefWidth="237.0" promptText="User Name" style="-fx-background-radius: 20;" />
-      <Label layoutX="99.0" layoutY="265.0" text="User Name :">
+      <ImageView fitHeight="542.0" fitWidth="544.0" layoutX="-1.0" layoutY="13.0" opacity="0.08" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../img/chat-login.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="580.0" fitWidth="607.0" layoutX="-109.0" layoutY="-229.0" opacity="0.35" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../img/wave.png" />
+         </image>
+      </ImageView>
+      <TextField fx:id="txtName" layoutX="175.0" layoutY="313.0" prefHeight="49.0" prefWidth="294.0" promptText="User Name" style="-fx-background-radius: 30;">
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets></TextField>
+      <Label layoutX="73.0" layoutY="327.0" text="User Name :">
          <font>
             <Font name="System Bold" size="15.0" />
          </font>
       </Label>
-      <JFXButton buttonType="RAISED" layoutX="225.0" layoutY="347.0" onAction="#btnLoginOnAction" prefHeight="34.0" prefWidth="86.0" style="-fx-background-radius: 30; -fx-background-color: #89CFF3;" text="Login">
+      <JFXButton buttonType="RAISED" layoutX="213.0" layoutY="439.0" onAction="#btnLoginOnAction" prefHeight="56.0" prefWidth="115.0" style="-fx-background-radius: 35; -fx-background-color: #89CFF3;" text="Login">
          <font>
-            <Font name="System Bold" size="15.0" />
+            <Font name="System Bold" size="25.0" />
          </font>
       </JFXButton>
-      <ImageView fitHeight="146.0" fitWidth="146.0" layoutX="195.0" layoutY="61.0">
+      <ImageView fitHeight="165.0" fitWidth="165.0" layoutX="188.0" layoutY="106.0">
          <image>
             <Image url="@../img/user-96.png" />
          </image>
